[Module System] Refactor the code to support module system. Currently implemented modules include:   1. Application Module   2. Memory Manager Module   3. Input Manager Module   4. Graphics Manager Module

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -1,11 +1,12 @@
 file(GLOB_RECURSE SRCS
-        Core/*.cpp
+        Application/*.cpp
+        Common/*.cpp
         Debug/*.cpp
         Input/*.cpp
+        Memory/*.cpp
         Renderer/*.cpp
         Utils/*.cpp
         Vulkan/*.cpp
-        Window/*.cpp
         )
 
 add_library(${PROJECT_NAME} STATIC ${SRCS})
