--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -32,6 +32,30 @@ target_link_libraries(${PROJECT_NAME} PUBLIC glm)
 find_package(Vulkan REQUIRED)
 target_link_libraries(${PROJECT_NAME} PUBLIC Vulkan::Vulkan)
 
+# Compile shaders
+set(SHADER_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Resource/Shaders)
+
+file(GLOB SHADERS
+        ${SHADER_SOURCE_DIR}/*.vert
+        ${SHADER_SOURCE_DIR}/*.frag
+        )
+
+foreach(source IN LISTS SHADERS)
+    get_filename_component(filename ${source} NAME)
+    set(binary_name ${filename}.spv)
+    add_custom_command(
+            COMMAND ${Vulkan_GLSLC_EXECUTABLE} ${source} -o ${SHADER_SOURCE_DIR}/${binary_name}
+            OUTPUT ${SHADER_SOURCE_DIR}/${binary_name}
+            DEPENDS ${source} ${SHADER_SOURCE_DIR}
+    )
+    list(APPEND SPV_SHADERS ${SHADER_SOURCE_DIR}/${binary_name})
+endforeach()
+
+add_custom_target(Shaders DEPENDS ${SPV_SHADERS})
+
+add_dependencies(${PROJECT_NAME} Shaders)
+
+
 # stb_image
 add_subdirectory(External/stb_image)
 target_link_libraries(${PROJECT_NAME} PUBLIC stb_image)
