[Scene loading] Add a basic scene loading system using assimp. But the current loading scheme is not perfect because it creates vulkan texture when loading and parsing the scene. The correct way should be loading the texture image into resource buffer on CPU side and transfer to GPU side using graphics manager.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Engine/External/spdlog"]
 	path = Engine/External/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Engine/External/Assimp"]
+	path = Engine/External/Assimp
+	url = https://github.com/assimp/assimp.git
