[Maintenance] 1. Rename directory Renderer into Rendering. 2. Add a new namespace Rendering. 3. Rename VulkanBuffer into Rendering::Buffer.

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -5,7 +5,7 @@ file(GLOB_RECURSE SRCS
         Input/*.cpp
         Memory/*.cpp
         Parser/*.cpp
-        Renderer/*.cpp
+        Rendering/*.cpp
         Scene/*.cpp
         Utils/*.cpp
         Vulkan/*.cpp
