--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,12 @@
 [submodule "Engine/External/spdlog"]
 	path = Engine/External/spdlog
 	url = https://github.com/gabime/spdlog.git
-[submodule "Engine/External/Assimp"]
-	path = Engine/External/Assimp
+[submodule "Engine/External/assimp"]
+	path = Engine/External/assimp
 	url = https://github.com/assimp/assimp.git
 [submodule "Engine/External/ktx"]
 	path = Engine/External/ktx
 	url = https://github.com/KhronosGroup/KTX-Software.git
+[submodule "Engine/External/bullet3"]
+	path = Engine/External/bullet3
+	url = https://github.com/bulletphysics/bullet3.git
