Implement GetBoundingBox for Mesh and test it in BasicPhysicsTest.cpp. Fix some bugs in tests caused by integration of EditorCamera.

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TEST_CASES FileSystemTest InputEventTest SceneLoadTest SceneRenderTest BasicPhysicsTest EditorCameraTest
+set(TEST_CASES FileSystemTest InputEventTest SceneLoadTest BasicPhysicsTest EditorCameraTest
         )
 
 foreach(TEST_CASE IN LISTS TEST_CASES)
