1. Remove unused submodule: ktx, which causes compiling errors 2. Add some build and get started instructions in README.md 3. Change direction of default directional light 4. Add a LightsTest to test multiple light sources instead of using EditorCameraTest for this purpose

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TEST_CASES FileSystemTest InputEventTest SceneLoadTest BasicPhysicsTest EditorCameraTest
+set(TEST_CASES FileSystemTest InputEventTest SceneLoadTest BasicPhysicsTest EditorCameraTest LightsTest
         )
 
 foreach(TEST_CASE IN LISTS TEST_CASES)
